iDaaS-Connect-BlueButton/resource/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: idaas-connect-bluebutton
  labels: &labels
    app: idaas-connect-bluebutton
spec:
  selector: *labels
  ports:
    - port: 8890
      targetPort: 8890
    - port: 9982
      targetPort: 9982

  type: NodePort
